# icub-models-feedstock

./: README.md  pixi.toml
.ci_support/: linux_64_python3.10.____cpython.yaml  linux_64_python3.11.____cpython.yaml  linux_64_python3.12.____cpython.yaml  linux_64_python3.13.____cp313.yaml  linux_64_python3.9.____cpython.yaml  linux_aarch64_python3.10.____cpython.yaml  linux_aarch64_python3.11.____cpython.yaml  linux_aarch64_python3.12.____cpython.yaml  linux_aarch64_python3.13.____cp313.yaml  linux_aarch64_python3.9.____cpython.yaml  linux_ppc64le_python3.10.____cpython.yaml  linux_ppc64le_python3.11.____cpython.yaml  linux_ppc64le_python3.12.____cpython.yaml  linux_ppc64le_python3.13.____cp313.yaml  linux_ppc64le_python3.9.____cpython.yaml  osx_64_python3.10.____cpython.yaml  osx_64_python3.11.____cpython.yaml  osx_64_python3.12.____cpython.yaml  osx_64_python3.13.____cp313.yaml  osx_64_python3.7.____cpython.yaml  osx_64_python3.8.____cpython.yaml  osx_64_python3.9.____cpython.yaml  osx_arm64_python3.10.____cpython.yaml  osx_arm64_python3.11.____cpython.yaml  osx_arm64_python3.12.____cpython.yaml  osx_arm64_python3.13.____cp313.yaml  osx_arm64_python3.9.____cpython.yaml  win_64_python3.10.____cpython.yaml  win_64_python3.11.____cpython.yaml  win_64_python3.12.____cpython.yaml  win_64_python3.13.____cp313.yaml  win_64_python3.9.____cpython.yaml
recipe/: 153.patch  179.patch  activate.msh  bld.bat  build.sh  deactivate.msh  fixver.patch  meta.yaml  recipe.yaml  run_test.bat  run_test.sh
recipe/test/: CMakeLists.txt  icub_models_main.cpp
